# ck3-translator

./: CMakeLists.txt  icon.qrc  main.cpp  tapi.cpp  tapi.h  thandler.cpp  thandler.h  tmainwindow.cpp  tmainwindow.h  tmainwindow.ui
